# CUDATutorial

./: 10_fused_bias_mask_scale_and_add_fp16.cu  10_fused_bias_mask_scale_and_add_fp32.cu  11_softmax.cu  12_measure_GPU_peak_perf.cu  13_1_CUDAstream_kernels_overlap.cu  13_2_CUDAstream_kernel_copy_overlap.cu  14_quantize.cu  15_1_fp32_fp16_gemv.cu  15_gemv.cuh  1_hellocuda.cu  2_indexing.cu  3_1_vectorized_vectorAdd.cu  3_vectorAdd.cu  4_device_query.cu  6_warp_level_reduce.cu  7_1_histogram.cu  7_histogram.cu  8_copy_if.cu  9_gelu.cu  CMakeLists.txt  README.md  reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  reduce_v6.cu
10_fused_bias_mask_scale_and_add/: 10_fused_bias_mask_scale_and_add_fp16.cu  10_fused_bias_mask_scale_and_add_fp32.cu
13_CUDAstream/: 13_1_CUDAstream_kernels_overlap.cu  13_2_CUDAstream_kernel_copy_overlap.cu
15_gemv/: 15_1_fp32_fp16_gemv.cu  15_2_fp32_fp16_gemv.cu  15_gemv.cuh
16_fused_dropout/: 16_dropout.cu  16_dropout.py
3_vectorAdd/: 3_1_vectorized_vectorAdd.cu  3_vectorAdd.cu
5_reduce/: reduce_baseline.cu  reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  reduce_v6.cu
